# projects-service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: deploy-cloud-run.yml
migrations/: 0001_create_projects.sql  0002_create_milestones.sql  0003_create_deliverables.sql  0004_create_messages.sql  0005_create_api_request_logs.sql  0006_add_budget.sql  0007_create_collaborators.sql  0008_create_progress_updates.sql
src/: lib.rs  main.rs
src/lib/: app_state.rs  auth.rs  models.rs  rate_limit.rs  router.rs
src/lib/handlers/: collaborators.rs  deliverables.rs  health.rs  messages.rs  milestones.rs  mod.rs  progress_updates.rs  projects.rs
tests/: integration_test.rs
