[workspace]

[package]
name = "projects-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "10"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
